Clean up more unused functions/images

--- a/css/browser.css
+++ b/css/browser.css
@@ -334,6 +334,10 @@ img{
     text-align: left;
 }
 
+.howToServeWindow a{
+    color: white;
+}
+
 /*==============================*/
 /*======= Game Info Card =======*/
 /*==============================*/
