--- a/new/css/browser.css
+++ b/new/css/browser.css
@@ -265,32 +265,27 @@ img{
     border: 4px solid #404f70;
     outline: 0;
     line-height: 1em;
-    margin-bottom: -200px;
     opacity: 0.85;
+    flex-grow: 0;
 }
 
-.alertWindow p, .howToServeWindow p{
+.swal2-content{
     color: white !important; 
     font-size: 16pt;    
 }
 
-.alertWindow .icon, .alertWindow .sweet-image{
+.swal2-icon{
     margin-top: 10px;
 }
 
-.alertWindow .sweet-spacer, .howToServeWindow .sweet-spacer{
-    margin: 0 !important;
-    height: 20px !important;
-}
-
-.alertWindow h2, .howToServeWindow h2{
-    position: absolute;
+.swal2-title{
+    position: absolute !important;
     width: 100%;
     top: 0px;
     left: 0px;
     height: 40px;
     line-height: 40px;
-    color: white;
+    color: white !important;
     background-color: black;
     font-size: 16pt;
     border-bottom: 4px solid #404f70;
@@ -299,25 +294,21 @@ img{
     font-weight: 700;
 }
 
-.alertWindow input{
+.swal2-input{
     height: 25px;
     margin-bottom: 0;
 }
 
-.alertWindow .sa-input-error {
-    top: 22px;
-}
-
-.alertWindow .sa-error-container {
+.swal2-validationerror {
     background-color: #13233d !important;   
     padding: 0;
     margin: 0;
 }
 
-.alertWindow button, .howToServeWindow button {
+.alertButton {
     font-family: "Conduit ITC";
     border-style: solid;
-    border: 2px solid white;
+    border: 2px solid white !important;
     background-color: black !important;
     font-size: 13pt;
     padding: 3px 20px;
@@ -326,16 +317,20 @@ img{
     color: white;
 }
 
-.alertWindow button:hover, .howToServeWindow button:hover{
+.alertButton:focus {
+    outline:0;
+}
+
+.alertButton:hover {
     background-color: #B1572A !important;    
 }
 
-.howToServeWindow .sweet-content{
+.howToServeWindow .swal2-content{
     text-align: left;
 }
 
-.howToServeWindow a{
-    color: white;
+.alertWindow a, .howToServeWindow a{
+    color: grey;
 }
 
 /*==============================*/
