--- a/new/css/browser.css
+++ b/new/css/browser.css
@@ -611,3 +611,8 @@ img{
 ::-webkit-scrollbar-thumb {
     background-color: #608085;
 }
+
+.serverIcon {
+    width: 30px;
+    padding-left: 5px;
+}
