--- a/new/css/browser.css
+++ b/new/css/browser.css
@@ -616,3 +616,24 @@ img{
     width: 30px;
     padding-left: 5px;
 }
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+    white-space: nowrap;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 5px;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+}
